[package]
name = "squidtun"
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[lib]
name = "squidtun"
path = "src/mod.rs"

[[bin]]
name = "squidtun-server"
path = "src/server/main.rs"

[[bin]]
name = "squidtun-client"
path = "src/client/main.rs"

[dependencies]
clap = "2.31"
futures = "0.1"
hyper = "0.11"
log = "0.4"
rand = "0.4"
sha1 = "0.6"
simple_logger = "0.5"
tokio-core = "0.1"
tokio-io = "0.1"
